Closed Bug 1678427 Opened 4 years ago Closed 4 years ago

Memory report for native Mac fonts mislabels the font face PSname as "family"

Categories

(Core :: Graphics, defect)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: jfkthame, Assigned: bradwerth)

Details

Attachments

(1 file)

In bug 1676255 the format of the reporting for native font resources was adjusted to be more similar to user fonts. This results in reporting something like:

5,457,184 B (00.59%) -- native-font-resource-mac
    1,942,368 B (00.21%) — font(family=Font) [27]
      774,176 B (00.08%) — font(family=ArialMT)
      753,696 B (00.08%) — font(family=Arial-BoldMT)
      421,920 B (00.05%) — font(family=Helvetica)
      315,424 B (00.03%) — font(family=OTS-derived-font)

However, note that it reports the font name prefixed with "family=", which is misleading because the name that is stored and reported for such a resource is not a font-family name but the PostScript name of the individual face.

We should re-label this (as "psname", or "face"?) so as not to mislead people into looking for font family names when investigating any issues related to these resources.

The listed fonts are individual faces, not font families. Since the face name
comes from a PostScript name, we'll use the label "psname".

Assignee: nobody → bwerth
Status: NEW → ASSIGNED
Pushed by bwerth@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/035ba753b5ff
Use a more precise label for native-font-resource-mac fonts. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: