Bug 1678427: Use a more precise label for native-font-resource-mac fonts. r=jfkthame

The listed fonts are individual faces, not font families. Since the face name
comes from a PostScript name, we'll use the label "psname".

Differential Revision: https://phabricator.services.mozilla.com/D97664